# odm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: BRANCHES.md  DESIGN.md  RELIABILITY_FIXES.md  ROADMAP.md
packaging/deb/: README.md  build-deb.sh  copyright  nfpm.yaml
packaging/exe/: README.md  build-exe.ps1  onvifcfg.iss
packaging/msi/: README.md  build-msi.ps1  install.ps1  onvifcfg.wxs
scripts/: write_buildinfo.ps1  write_buildinfo.sh
src/onvifcfg/: __init__.py  __main__.py  _buildinfo.py  cli.py  credentials_cache.py  device_info.py  discovery.py  exceptions.py  maintenance.py  media.py  models.py  network.py  preview.py  ptz.py  reachability.py  session.py  users.py  validation.py
src/onvifcfg/web/: __init__.py  app.py
src/onvifcfg/web/static/: style.css
src/onvifcfg/web/templates/: base.html  confirm.html  connect.html  device.html  index.html  result.html  rtsp.html
tests/: test_media_encoder.py  test_models.py  test_network_diff.py  test_validation.py
